# warren

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs
src/commands/: clone.rs  dig.rs  export.rs  import.rs  inspect.rs  ls.rs  mod.rs  rm.rs  run.rs  update.rs
src/install/: detect.rs  download.rs  executor.rs  mod.rs  rewriter.rs
src/instance/: launcher.rs  layout.rs  metadata.rs  mod.rs
src/shell/: detect.rs  integration.rs  mod.rs
src/ui/: mod.rs  progress.rs  theme.rs
