[package]
name    = "warren"
version = "0.1.0"
edition = "2024"
description = "Install any CLI tool unlimited times. Every instance is its own world."
license = "MIT"
repository = "https://github.com/swadhinbiswas/warren"
keywords = ["cli", "isolation", "instance", "runtime", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "color", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Path rewriting
regex = "1"

# Filesystem utilities
walkdir = "2"
dirs = "5"
which = "7"
tempfile = "3"

# Progress & UX
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto / integrity
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Archive (for export/import)
tar = "0.4"
flate2 = "1"

# Futures (for async streams)
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
